--- a/about.html
+++ b/about.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/about.css">
     <title>About Us</title>
 </head>
 <body>
@@ -13,11 +13,11 @@
             <h1>About Us Page.</h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/pricing.html">Pricing</a></li>
-                    <li><a href="/faq.html">Faq</a></li>
-                    <li><a href="/help.html">Help</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
+                    <li><a href="faq.html">Faq</a></li>
+                    <li><a href="help.html">Help</a></li>
                 </ul>
             </nav>
         </div>
@@ -25,7 +25,7 @@
     <main>
         <div class="white"></div>
         <div class="image">
-            <img src="/images/about.jpeg" width="1100" height="500" alt="About">
+            <img src="images/about.jpeg" width="1100" height="500" alt="About">
         </div>
         <div class="continued">
             <div class="continued1">
@@ -82,9 +82,9 @@
             <li class="nav__item">
                 <h2 class="nav__title">MoveTo</h2>
                 <ul class="nav__ul">
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About</a></li>
-                    <li><a href="/pricing.html">Pricing</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="pricing.html">Pricing</a></li>
                 </ul>
             </li>
             
@@ -95,8 +95,8 @@
                     <li><a href="#">Software Design</a></li>
                     <li><a href="#">Digital Signage</a></li>
                     <li><a href="#">Automation</a></li>
-                    <li><a href="/faq.html">Faq</a></li>
-                    <li><a href="/help.html">Help</a></li>
+                    <li><a href="faq.html">Faq</a></li>
+                    <li><a href="help.html">Help</a></li>
                 </ul>
             </li>
             
